# ClinDoc-Bench-In

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  GOVERNANCE.md  LICENSE  MODEL_CARD_TEMPLATE.md  NOTICE  PUBLICATION_READINESS_REPORT.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  environment.yml  main_pipeline.py  pyproject.toml  requirements.txt  run_all_extended.sh  run_all_full.sh
.github/: PULL_REQUEST_TEMPLATE.md
agents/: base_agent.py
community/: README.md
configs/: backends.yaml  benchmark_defaults.yaml  config.py  prompts.yaml  prompts_phase_d_ocr_text.yaml
data/: extraction_manifest.csv  extraction_manifest_internal_qwen3_27b_subset.csv  extraction_manifest_smoke.csv  extraction_manifest_subset.csv  full_benchmark_manifest.csv  manifest.csv  manifest_canonical.csv  manifest_compare_v1_subset.csv  manifest_compare_v2_subset.csv  manifest_expanded_gt_june12.csv  manifest_internal_qwen3_27b_13of14_partial.csv  manifest_internal_qwen3_27b_full.csv  manifest_internal_qwen3_27b_new_gt_june12.csv  manifest_internal_qwen3_27b_remaining9.csv  manifest_internal_qwen3_27b_subset.csv  manifest_new_annotations_june12.csv  manifest_openrouter_google_gemini-2.5-flash_smoke.csv  manifest_openrouter_meta-llama_llama-3.2-11b-vision-instruct_smoke.csv  manifest_openrouter_qwen_qwen2.5-vl-72b-instruct_smoke.csv  manifest_phase_d_doctr_text_llm_smoke.csv  manifest_phase_d_doctr_text_llm_smoke_v2.csv  manifest_qwen_v2_full.csv  manifest_qwen_v2_missing.csv  manifest_resolution_check_1024.csv  (+6 more)
(+265 files in other folders)
